--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "name": "nft-test",
+  "version": "1.0.0",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start_local": "lite-server"
+  },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.0"
+    "@openzeppelin/contracts": "^4.9.0",
+    "lite-server": "^2.6.1"
   }
 }
