--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "nft-test",
+  "name": "prova",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start_local": "lite-server"
+    "start": "node index.js"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.0",
-    "lite-server": "^2.6.1"
+    "axios": "^1.4.0",
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "ipfs-http-client": "^60.0.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
