--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start_local": "lite-server"
+    "start_local": "node -r dotenv/config index.js"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.0",
-    "lite-server": "^2.6.1"
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2"
   }
 }
