mongoose collection schemas

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,8 @@
 # This is an example file for running the app locally.
 # This must be copied into .env file
 
-#Webapp port
+# URL to the MongoDB database
+DB_URL='your-db-url-with-user-and-password'
+
+# Webapp port
 PORT='port-number'
